fir_parser.output
Nonterminals useless in grammar

    str


Terminals unused in grammar

    tLEAVE
    tRESTART
    tTYPE_INT
    tTYPE_STRING
    tTYPE_REAL
    tTYPE_VOID
    tNULL
    tAND
    tOR
    tSIZEOF
    tRETURN
    tARROW
    tEPILOGUE
    tTHEN
    tIFX


Rules useless in grammar

   35 str: tSTRING
   36    | str tSTRING


State 4 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: tBEGIN list tEND

    2 list: stmt
    3     | list stmt

    4 stmt: expr ';'
    5     | tWRITE exprs ';'
    6     | tWRITELN exprs ';'
    7     | tREAD lval ';'
    8     | tWHILE expr tDO stmt
    9     | tWHILE expr tDO stmt tFINALLY stmt
   10     | tIF '(' expr ')' stmt tELSE stmt
   11     | '{' list '}'

   12 exprs: expr
   13      | exprs expr

   14 expr: tINTEGER
   15     | tREAL
   16     | tSTRING
   17     | '-' expr
   18     | expr '+' expr
   19     | expr '-' expr
   20     | expr '*' expr
   21     | expr '/' expr
   22     | expr '%' expr
   23     | expr '<' expr
   24     | expr '>' expr
   25     | expr tGE expr
   26     | expr tLE expr
   27     | expr tNE expr
   28     | expr tEQ expr
   29     | '(' expr ')'
   30     | '[' expr ']'
   31     | lval
   32     | lval '=' expr

   33 lval: tIDENTIFIER
   34     | tIDENTIFIER '[' expr ']'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 22
    '(' (40) 10 29
    ')' (41) 10 29
    '*' (42) 20
    '+' (43) 18
    '-' (45) 17 19
    '/' (47) 21
    ';' (59) 4 5 6 7
    '<' (60) 23
    '=' (61) 32
    '>' (62) 24
    '[' (91) 30 34
    ']' (93) 30 34
    '{' (123) 11
    '}' (125) 11
    error (256)
    tINTEGER <i> (258) 14
    tIDENTIFIER <s> (259) 33 34
    tSTRING <s> (260) 16
    tREAL <d> (261) 15
    tWHILE (262) 8 9
    tIF (263) 10
    tREAD (264) 7
    tBEGIN (265) 1
    tEND (266) 1
    tLEAVE (267)
    tRESTART (268)
    tWRITE (269) 5
    tWRITELN (270) 6
    tDO (271) 8 9
    tTYPE_INT (272)
    tTYPE_STRING (273)
    tTYPE_REAL (274)
    tTYPE_VOID (275)
    tNULL (276)
    tAND (277)
    tOR (278)
    tSIZEOF (279)
    tRETURN (280)
    tARROW (281)
    tEPILOGUE (282)
    tTHEN (283)
    tIFX (284)
    tELSE (285) 10
    tFINALLY (286) 9
    tGE (287) 25
    tLE (288) 26
    tEQ (289) 28
    tNE (290) 27
    tUNARY (291)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program <node> (53)
        on left: 1
        on right: 0
    list <sequence> (54)
        on left: 2 3
        on right: 1 3 11
    stmt <node> (55)
        on left: 4 5 6 7 8 9 10 11
        on right: 2 3 8 9 10
    exprs <sequence> (56)
        on left: 12 13
        on right: 5 6 13
    expr <expression> (57)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
        on right: 4 8 9 10 12 13 17 18 19 20 21 22 23 24 25 26 27 28 29 30 32 34
    lval <lvalue> (58)
        on left: 33 34
        on right: 7 31 32


State 0

    0 $accept: • program $end

    tBEGIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: tBEGIN • list tEND

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    tWHILE       shift, and go to state 7
    tIF          shift, and go to state 8
    tREAD        shift, and go to state 9
    tWRITE       shift, and go to state 10
    tWRITELN     shift, and go to state 11
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '{'          shift, and go to state 14
    '['          shift, and go to state 15

    list  go to state 16
    stmt  go to state 17
    expr  go to state 18
    lval  go to state 19


State 2

    0 $accept: program • $end

    $end  shift, and go to state 20


State 3

   14 expr: tINTEGER •

    $default  reduce using rule 14 (expr)


State 4

   33 lval: tIDENTIFIER •
   34     | tIDENTIFIER • '[' expr ']'

    '['  shift, and go to state 21

    '['       [reduce using rule 33 (lval)]
    $default  reduce using rule 33 (lval)


State 5

   16 expr: tSTRING •

    $default  reduce using rule 16 (expr)


State 6

   15 expr: tREAL •

    $default  reduce using rule 15 (expr)


State 7

    8 stmt: tWHILE • expr tDO stmt
    9     | tWHILE • expr tDO stmt tFINALLY stmt

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 22
    lval  go to state 19


State 8

   10 stmt: tIF • '(' expr ')' stmt tELSE stmt

    '('  shift, and go to state 23


State 9

    7 stmt: tREAD • lval ';'

    tIDENTIFIER  shift, and go to state 4

    lval  go to state 24


State 10

    5 stmt: tWRITE • exprs ';'

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    exprs  go to state 25
    expr   go to state 26
    lval   go to state 19


State 11

    6 stmt: tWRITELN • exprs ';'

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    exprs  go to state 27
    expr   go to state 26
    lval   go to state 19


State 12

   17 expr: '-' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 28
    lval  go to state 19


State 13

   29 expr: '(' • expr ')'

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 29
    lval  go to state 19


State 14

   11 stmt: '{' • list '}'

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    tWHILE       shift, and go to state 7
    tIF          shift, and go to state 8
    tREAD        shift, and go to state 9
    tWRITE       shift, and go to state 10
    tWRITELN     shift, and go to state 11
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '{'          shift, and go to state 14
    '['          shift, and go to state 15

    list  go to state 30
    stmt  go to state 17
    expr  go to state 18
    lval  go to state 19


State 15

   30 expr: '[' • expr ']'

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 31
    lval  go to state 19


State 16

    1 program: tBEGIN list • tEND
    3 list: list • stmt

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    tWHILE       shift, and go to state 7
    tIF          shift, and go to state 8
    tREAD        shift, and go to state 9
    tEND         shift, and go to state 32
    tWRITE       shift, and go to state 10
    tWRITELN     shift, and go to state 11
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '{'          shift, and go to state 14
    '['          shift, and go to state 15

    stmt  go to state 33
    expr  go to state 18
    lval  go to state 19


State 17

    2 list: stmt •

    $default  reduce using rule 2 (list)


State 18

    4 stmt: expr • ';'
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    tGE  shift, and go to state 34
    tLE  shift, and go to state 35
    tEQ  shift, and go to state 36
    tNE  shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44
    ';'  shift, and go to state 45


State 19

   31 expr: lval •
   32     | lval • '=' expr

    '='  shift, and go to state 46

    $default  reduce using rule 31 (expr)


State 20

    0 $accept: program $end •

    $default  accept


State 21

   34 lval: tIDENTIFIER '[' • expr ']'

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 47
    lval  go to state 19


State 22

    8 stmt: tWHILE expr • tDO stmt
    9     | tWHILE expr • tDO stmt tFINALLY stmt
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    tDO  shift, and go to state 48
    tGE  shift, and go to state 34
    tLE  shift, and go to state 35
    tEQ  shift, and go to state 36
    tNE  shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44


State 23

   10 stmt: tIF '(' • expr ')' stmt tELSE stmt

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 49
    lval  go to state 19


State 24

    7 stmt: tREAD lval • ';'

    ';'  shift, and go to state 50


State 25

    5 stmt: tWRITE exprs • ';'
   13 exprs: exprs • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    ';'          shift, and go to state 51
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 52
    lval  go to state 19


State 26

   12 exprs: expr •
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    tGE  shift, and go to state 34
    tLE  shift, and go to state 35
    tEQ  shift, and go to state 36
    tNE  shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44

    '-'       [reduce using rule 12 (exprs)]
    $default  reduce using rule 12 (exprs)


State 27

    6 stmt: tWRITELN exprs • ';'
   13 exprs: exprs • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    ';'          shift, and go to state 53
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 52
    lval  go to state 19


State 28

   17 expr: '-' expr •
   18     | expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    $default  reduce using rule 17 (expr)


State 29

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr
   29     | '(' expr • ')'

    tGE  shift, and go to state 34
    tLE  shift, and go to state 35
    tEQ  shift, and go to state 36
    tNE  shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44
    ')'  shift, and go to state 54


State 30

    3 list: list • stmt
   11 stmt: '{' list • '}'

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    tWHILE       shift, and go to state 7
    tIF          shift, and go to state 8
    tREAD        shift, and go to state 9
    tWRITE       shift, and go to state 10
    tWRITELN     shift, and go to state 11
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '{'          shift, and go to state 14
    '}'          shift, and go to state 55
    '['          shift, and go to state 15

    stmt  go to state 33
    expr  go to state 18
    lval  go to state 19


State 31

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr
   30     | '[' expr • ']'

    tGE  shift, and go to state 34
    tLE  shift, and go to state 35
    tEQ  shift, and go to state 36
    tNE  shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44
    ']'  shift, and go to state 56


State 32

    1 program: tBEGIN list tEND •

    $default  reduce using rule 1 (program)


State 33

    3 list: list stmt •

    $default  reduce using rule 3 (list)


State 34

   25 expr: expr tGE • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 57
    lval  go to state 19


State 35

   26 expr: expr tLE • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 58
    lval  go to state 19


State 36

   28 expr: expr tEQ • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 59
    lval  go to state 19


State 37

   27 expr: expr tNE • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 60
    lval  go to state 19


State 38

   24 expr: expr '>' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 61
    lval  go to state 19


State 39

   23 expr: expr '<' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 62
    lval  go to state 19


State 40

   18 expr: expr '+' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 63
    lval  go to state 19


State 41

   19 expr: expr '-' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 64
    lval  go to state 19


State 42

   20 expr: expr '*' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 65
    lval  go to state 19


State 43

   21 expr: expr '/' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 66
    lval  go to state 19


State 44

   22 expr: expr '%' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 67
    lval  go to state 19


State 45

    4 stmt: expr ';' •

    $default  reduce using rule 4 (stmt)


State 46

   32 expr: lval '=' • expr

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '['          shift, and go to state 15

    expr  go to state 68
    lval  go to state 19


State 47

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr
   34 lval: tIDENTIFIER '[' expr • ']'

    tGE  shift, and go to state 34
    tLE  shift, and go to state 35
    tEQ  shift, and go to state 36
    tNE  shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44
    ']'  shift, and go to state 69


State 48

    8 stmt: tWHILE expr tDO • stmt
    9     | tWHILE expr tDO • stmt tFINALLY stmt

    tINTEGER     shift, and go to state 3
    tIDENTIFIER  shift, and go to state 4
    tSTRING      shift, and go to state 5
    tREAL        shift, and go to state 6
    tWHILE       shift, and go to state 7
    tIF          shift, and go to state 8
    tREAD        shift, and go to state 9
    tWRITE       shift, and go to state 10
    tWRITELN     shift, and go to state 11
    '-'          shift, and go to state 12
    '('          shift, and go to state 13
    '{'          shift, and go to state 14
    '['          shift, and go to state 15

    stmt  go to state 70
    expr  go to state 18
    lval  go to state 19


State 49

   10 stmt: tIF '(' expr • ')' stmt tELSE stmt
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    tGE  shift, and go to state 34
    tLE  shift, and go to state 35
    tEQ  shift, and go to state 36
    tNE  shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44
    ')'  shift, and go to state 71


State 50

    7 stmt: tREAD lval ';' •

    $default  reduce using rule 7 (stmt)


State 51

    5 stmt: tWRITE exprs ';' •

    $default  reduce using rule 5 (stmt)


State 52

   13 exprs: exprs expr •
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    tGE  shift, and go to state 34
    tLE  shift, and go to state 35
    tEQ  shift, and go to state 36
    tNE  shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44

    '-'       [reduce using rule 13 (exprs)]
    $default  reduce using rule 13 (exprs)


State 53

    6 stmt: tWRITELN exprs ';' •

    $default  reduce using rule 6 (stmt)


State 54

   29 expr: '(' expr ')' •

    $default  reduce using rule 29 (expr)


State 55

   11 stmt: '{' list '}' •

    $default  reduce using rule 11 (stmt)


State 56

   30 expr: '[' expr ']' •

    $default  reduce using rule 30 (expr)


State 57

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   25     | expr tGE expr •
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44

    $default  reduce using rule 25 (expr)


State 58

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   26     | expr tLE expr •
   27     | expr • tNE expr
   28     | expr • tEQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44

    $default  reduce using rule 26 (expr)


State 59

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr
   28     | expr tEQ expr •

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44

    $default  reduce using rule 28 (expr)


State 60

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   27     | expr tNE expr •
   28     | expr • tEQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44

    $default  reduce using rule 27 (expr)


State 61

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   24     | expr '>' expr •
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44

    $default  reduce using rule 24 (expr)


State 62

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   23     | expr '<' expr •
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    '%'  shift, and go to state 44

    $default  reduce using rule 23 (expr)


State 63

   18 expr: expr • '+' expr
   18     | expr '+' expr •
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | expr • '<' expr
   24     | expr • '>' expr
   25     | expr • tGE expr
   26     | expr • tLE expr
   27     | expr • tNE expr
   28     | expr • tEQ expr
